// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon element produces button output with properties supplied 1`] = `
<button
  aria-label="Star it"
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-11q1dcb-MuiButtonBase-root-MuiIconButton-root"
  disabled={false}
  id="app.page1.save"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  title="Star it"
  type="button"
>
  <span
    aria-hidden={true}
    className="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-1n5qiej-MuiIcon-root"
  >
    star
  </span>
</button>
`;

exports[`Icon element produces empty  output with display false 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-q5nb25-MuiButtonBase-root-MuiIconButton-root"
  disabled={false}
  id="app.page1.save"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    aria-hidden={true}
    className="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-1n5qiej-MuiIcon-root"
  >
    star
  </span>
</button>
`;

exports[`Icon element produces empty output with display false 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-q5nb25-MuiButtonBase-root-MuiIconButton-root"
  disabled={false}
  id="app.page1.save"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    aria-hidden={true}
    className="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-1n5qiej-MuiIcon-root"
  >
    star
  </span>
</button>
`;

exports[`Icon element produces icon output with properties supplied 1`] = `
<span
  aria-hidden={true}
  aria-label="Star it"
  className="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-19xhswp-MuiIcon-root"
  id="app.page1.save"
  title="Star it"
>
  star
</span>
`;

exports[`Icon element produces output with default values where properties omitted 1`] = `
<span
  aria-hidden={true}
  className="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-1n5qiej-MuiIcon-root"
  id="app.page1.save"
>
  star
</span>
`;

exports[`Icon element produces output with properties supplied as state values 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-11bqc0x-MuiButtonBase-root-MuiIconButton-root"
  disabled={false}
  id="app.page1.save"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    aria-hidden={true}
    className="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-1n5qiej-MuiIcon-root"
  >
    star
  </span>
</button>
`;
